# skypro

./: README.md  main.py  pyproject.toml
src/: decorators.py  generators.py  masks.py  mylog.txt  processing.py  widget.py
src/log/: mylog.txt
tests/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
tests/log/: mylog.txt
